# occ

./: .gitignore  .guix-channel  AUTONOMOUS_ARCHITECTURE_SUMMARY.md  CMakeLists.txt  Cargo.toml  GUIX_BUILD_FIXES_NOV2025.md  GUIX_BUILD_FIX_REPORT.md  GUIX_CI_MODULE_FIX.md  GUIX_HANGING_FIX.md  GUIX_USAGE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  autogenesis_engine.py  autogenesis_report.md  autogenesis_roadmap.json  build_failure_analysis.md  cognitive_synergy_dashboard.py  cognumach.scm  configure-kernel-integration.sh  guix-old.scm  guix-simple.scm  guix.scm  hurdcog.scm  o9.md  occ-hurdcog-unified.scm  package-lock.json  package.json  synergy.sh  synergy_enhanced.sh  synergy_improved.sh  test-guix-syntax.sh  test-integration.sh  validate-guix-syntax.scm
.config/shepherd/: init.scm
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: AUTONOMOUS_ARCHITECTURE_SUMMARY (2).md  Arc-Halo Database Integration Enhancement Summary (1).md  Cognitive Architecture Diagrams (1).md  Cycle_of_the_Phoenix (1) (1).md  Deep Tree Echo Hypergraph Enhancement Summary (1).md  KAWAII_HEXAPOD_SYSTEM4_ARCHITECTURE (2) (1).md  Membrane Computing - Trialectic Architecture (1).md  The Third Order Cybernetics of Eric Schwarz and Ma (1).md  guix-builder.yml  neural-net-agent.md
.github/workflows/: SELF_IMPROVEMENT_README.md  WORKFLOW_COMPARISON.md  autogenesis.yml  fetch.yml  generate-cargo-commit.yml  generate-cargo-toml.yml  guix-build.yml  incremental-build.yml  integrate-modules.yml  msvc.yml  objective-c-xcode.yml  read.yml  self-improvement (1).yml  self-improvement.yml  self-maintenance.yml  setup.yml  sync.yml
.guix/: README.md  manifest.scm  validate-ssr-fix.sh  verify.sh
.guix/modules/: aphrodite.scm  gnucash.scm  koboldcpp.scm  opencog-package.scm
agentic-chatbots/: CMakeLists.txt
agentic-chatbots/src/: collaborative_reasoner.cpp  knowledge_integration.cpp
agents/: CMakeLists.txt
atomspace/: CMakeLists.txt
atomspace-accelerator/: CMakeLists.txt
atomspace-accelerator/src/: query_optimizer.cpp
atomspace-explorer/: npm-shrinkwrap.json  package-lock.json  package.json
atomspace-typescript/: package-lock.json  package.json
atomspace/cmake/: OpenCogAtomTypes.cmake
benchmark/: CMakeLists.txt
build-test/agentic-chatbots/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/atomspace-accelerator/: CMakeCache.txt  Makefile  cmake_install.cmake
build-test/coggml/: CMakeCache.txt  Makefile  cmake_install.cmake  coggml-config.cmake
build-test/cogself/: CMakeCache.txt  Makefile  cmake_install.cmake
coggml/: CMakeLists.txt  README.md
coggml/include/coggml/: cognitive_shard.h  shard_coordinator.h  shard_message.h
coggml/src/: cognitive_shard.cpp  shard_coordinator.cpp
cognumach/tools/: dtrace-analyze-enhanced.py  dtrace-visualize.py  instrumentation-report.py
cogself/: CMakeLists.txt  README.md
cogself/include/cogself/: cogself.h  distributed_identity.h
cogself/src/: agi_goal_tracker.cpp  cogself.cpp  distributed_identity.cpp  synergy_manager.cpp
docs/: architecture.md  generate_timeline.py
examples/: cogprime_distributed_integration.cpp  synergy_demo.py  test_cogprime_integration.cpp  test_cogprime_minimal.cpp
examples/cognitive-architecture/: CMakeLists.txt  README.md  demo.cpp
hurdcog-integration/: atomspace-hurdcog-bridge.py
link-grammar/: ChangeLog  README.md  configure.ac
link-grammar/link-grammar/dict-atomese/: lookup-atomese.cc  sections.cc
linkgrammar-relex-web/: requirements.txt
matrix/: CMakeLists.txt
matrix/tests/matrix/: VectorAPIUTest.cxxtest
opencog-neo4j/: pom.xml
packaging/: opencog.scm
relex/: pom.xml
src/core/grammar/: inference.scm
src/core/memory/: atomspace.scm
tv-toolbox/: TVToolBox.hs
unify/tests/unify/unifier/: UnifyUTest.cxxtest
