[package]
name = "hyperon"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
# Add actual dependencies here if needed

[lib]
name = "hyperon"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
debug = false

[profile.dev]
lto = false
opt-level = 0
debug = true

